--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 </div>
                 <div class="contact-text">
                   <h4>Location</h4>
-                  <p>City, Country</p>
+                  <p>Pune, Maharashtra, India</p>
                 </div>
               </div>
               <div class="contact-item">
@@ -455,7 +455,7 @@
                 </div>
                 <div class="contact-text">
                   <h4>Email</h4>
-                  <p>your.email@example.com</p>
+                  <p>anuragdigrase2003@gmail.com</p>
                 </div>
               </div>
               <div class="contact-item">
@@ -464,17 +464,19 @@
                 </div>
                 <div class="contact-text">
                   <h4>Phone</h4>
-                  <p>+19 12345 67890</p>
+                  <p>+91 96*** ****2</p>
                 </div>
               </div>
             </div>
             <div class="social-links">
               <a
-                href="www.linkedin.com/in/anurag-digrase-799348243"
+                href="https://www.linkedin.com/in/anurag-digrase-799348243/"
                 class="social-link"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
-              <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/anurag0606" class="social-link"
+                ><i class="fab fa-github"></i
+              ></a>
               <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
               <a href="#" class="social-link"
                 ><i class="fab fa-dribbble"></i
