--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <!-- <a href="#" class="btn primary-btn download-btn">Download Resume</a> -->
             <a
-              href="resume/Anurag Digrase 9699641882.pdf"
+              href="resume/Anurag Digrase.pdf"
               class="btn primary-btn download-btn"
               download="My_Resume.pdf"
               >Download Resume</a
