--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                 <!-- <span>MongoDB</span> -->
               </div>
               <div class="project-links">
-                <a href="#" class="btn small-btn">View Project</a>
-                <a href="#" class="btn small-btn secondary-btn">Source Code</a>
+                <a href="https://github.com/anurag0606/Power-BI-Data-Analysis-Dashboard/blob/main/E-Comerce%20Salse%20Dashboard/E-Comerce%20Salse%20Dashboard.png" class="btn small-btn">View Project</a>
+                <a href="https://github.com/anurag0606/Power-BI-Data-Analysis-Dashboard/tree/main/E-Comerce%20Salse%20Dashboard" class="btn small-btn secondary-btn">Source Code</a>
               </div>
             </div>
           </div>
