--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
                 <!-- <span>MongoDB</span> -->
               </div>
               <div class="project-links">
-                <a href="#" class="btn small-btn">View Project</a>
-                <a href="#" class="btn small-btn secondary-btn">Source Code</a>
+                <a href="https://github.com/anurag0606/Power-BI-Data-Analysis-Dashboard/blob/main/Data%20Professional%20Survey%20Breakdown/Data%20Professional%20Survey%20Breakdown.png" class="btn small-btn">View Project</a>
+                <a href="https://github.com/anurag0606/Power-BI-Data-Analysis-Dashboard/tree/main/Data%20Professional%20Survey%20Breakdown" class="btn small-btn secondary-btn">Source Code</a>
               </div>
             </div>
           </div>
